# web-exercises

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
codewars/: README.md
codewars/cpp/: battleship.hpp  magic-compare.hpp
codewars/haskell/: algebraic-isomorphism.hs  applicative-parsers.hs  binary-polynoms.hs  church-and-peano.hs  coroutines.hs  count-them-all.hs  even-odd-proof.hs  finally-tagless.hs  five-monads.hs  imperative.hs  isomorphisms.hs  lensmaker.hs  lisp-interpreter.hs  polyvariadic-functions.hs  regex-parser.hs  scott-encoding.hs  singletons.hs  ski.hs  symbolic-differentiation.hs  yoneda.hs
codingame/: CMakeLists.txt
codingame/binary-search/: CMakeLists.txt  binary_search.cpp  binary_search.hpp  test_gen.hpp
codingame/code-vs-zombie/: CMakeLists.txt  code_vs_zombie.cpp
codingame/code-vs-zombie/include/: code_vs_zombie.hpp  stdin.hpp  types.hpp
codingame/ghost-in-the-cell/: CMakeLists.txt  cache.hpp  decide.hpp  decisions.hpp  entity.hpp  ghost_in_the_cell.cpp  ghost_in_the_cell.hpp  graph.hpp  stdin_input.hpp  stdout_output.hpp  strong_types.hpp  types.hpp
codingame/ghost-in-the-cell/simulator/: simulator.cpp
codingame/ghost-in-the-cell/tests/: decisions.cpp  gitc_test.cpp  graph.cpp
codingame/golf-winamax/: CMakeLists.txt  golf_winamax.cpp  golf_winamax.hpp
codingame/include/: strong_types.hpp
codingame/spring-2021/: CMakeLists.txt
codingame/spring-2021/src/: main.cpp
codingame/tic-tac-toe-ultimate/: CMakeLists.txt  logic.cpp  tic_tac_toe.hpp
codingame/traffic-lights/: CMakeLists.txt  traffic_lights.cpp  traffic_lights.hpp
cpp/: CMakeLists.txt  magic-compare.hpp
cpp/code-vs-zombie/include/: code_vs_zombie.hpp  stdin.hpp  types.hpp
cpp/ghost-in-the-cell/: CMakeLists.txt  decide.hpp  decisions.hpp  entity.hpp  ghost_in_the_cell.cpp  ghost_in_the_cell.hpp  graph.hpp  stdin_input.hpp  types.hpp
cpp/ghost-in-the-cell/tests/: decisions.cpp  gitc_test.cpp  graph.cpp
cpp/tic-tac-toe-ultimate/: logic.cpp  tic_tac_toe.hpp
cpp/traffic-lights/: traffic_lights.cpp  traffic_lights.hpp
haskell/: applicative-parsers.hs  binary-polynoms.hs  finally-tagless.hs  five-monads.hs  isomorphisms.hs  polyvariadic-functions.hs  regex-parser.hs  singletons.hs  ski.hs  symbolic-differentiation.hs
